-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0
-
OS X 10.11.3
-
d37239aa419ee4adff4b0a8d5c1403cadff72319 (qtbase/5.6, 7.4.2016, 5.6.1)
Add some encoded file name (日本語.txt) to QNetworkRequest url and send it by FTP protocol to the FTP server. Result is that server gets file named ???.txt.
Steps to reproduce:
1) Run attached sample
2) Press button, select file to upload
3) Edit server path (Leave 日本語.txt part)
4) Input username
5) Input password
6) Press Upload button
7) See the result in the server
| For Gerrit Dashboard: QTBUG-52303 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 154814,4 | QFtp: Use UTF-8 encoding. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 155116,1 | QFtp: Fall back to Latin1 should Utf8 decoding of server replies fail. | 5.6 | qt/qtbase | Status: ABANDONED | +1 | 0 |
| 155117,1 | Revert "QFtp: Use UTF-8 encoding." | 5.6 | qt/qtbase | Status: ABANDONED | 0 | 0 |