QFtp: Use UTF-8 encoding.

According to RFC 2640, FTP uses UTF-8 encoding. Fix the conversions
accordingly.

Task-number: QTBUG-52303
Change-Id: I615199b3d074fc3861f25df113dda672525766b6
Reviewed-by: Edward Welbourne <edward.welbourne@theqtcompany.com>
Reviewed-by: Richard J. Moore <rich@kde.org>

cregit: d37239aa419ee4adff4b0a8d5c1403cadff72319 https://github.com/qt/qtbase/commit/d37239aa419ee4adff4b0a8d5c1403cadff72319